Fixes
-CSS width, horizontal scroll, and font fixes

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    padding: 0;
+    padding: 25px;
     margin: 0;
     background: #000;
     color: orange;
@@ -61,7 +61,6 @@ aside img {
 
 .material-icons.md-36 {
     font-size: 36px;
-
 }
 
 aside a {
@@ -135,7 +134,7 @@ header h5 {
 .hobbies h2 {
     font-weight: 300;
     text-transform: uppercase;
-    text-decoration: line-through;
+    text-decoration: underline;
     padding-bottom: 10px;
     margin: 80px 0 0 0;
     letter-spacing: 4px;
@@ -222,7 +221,7 @@ label {
 /********************** Hobbies section **********************/
 #carousel {
     position: relative;
-    width: 100%;
+    width: 90%;
     height: 300px;
     overflow-x: show;
     overflow-y: hidden;
@@ -231,12 +230,25 @@ label {
 }
 
 .slide {
-    width: 500px;
-    height: 500px;
+    width: 450px;
 }
 
 #carousel .slide {
     display: inline-block;
+}
+
+#left-button,#right-button {
+    display: inline-block;
+    text-align: center;
+    font-size: 24px;
+}
+
+#left-button {
+    float: left;
+}
+
+#right-button {
+    float: right;
 }
 
 form input[type="text"], 
